--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -13,6 +13,7 @@
     <h1>Top Houses</h1>
     <div class="houses">
         {{#each offers}}
+            {{> offer}}
             <div class="card-home">
                 <h2>Real House Luxury Villa</h2>
                 <div class="cta-container"><a href="#" class="details-link">Details</a></div>
