--- a/src/views/partials/navBar.hbs
+++ b/src/views/partials/navBar.hbs
@@ -9,8 +9,8 @@
         <li><a href="/users/register">Register</a></li>
         {{else}}
         <!-- Logged users -->
-        <li><a href="/offers/create">Create offer</a></li>
-        <li><a href="/offers/search">Search</a></li>
+        <li><a href="/housing/create">Create offer</a></li>
+        <li><a href="/housing/search">Search</a></li>
         <li><a href="/users/logout">Logout</a></li>
         {{/unless}}
     </ul>
