Add form metod and fix typo places to pieces

--- a/src/views/offers/create.hbs
+++ b/src/views/offers/create.hbs
@@ -4,7 +4,7 @@
 
         <h2 class="box-heading"> Add new home</h2>
 
-        <form class="form" action="" method="">
+        <form class="form" method="POST">
             <div class="input">
                 <input type="text" class="input-field" id="home-name" placeholder="Real House Luxury Villa..." name="name"
                     value="{{name}}" />
@@ -34,7 +34,7 @@
             </div>
 
             <div class="input">
-                <input type="number" class="input-field" id="availablePieces" placeholder="1" name="places" value="{{places}}" />
+                <input type="number" class="input-field" id="availablePieces" placeholder="1" name="pieces" value="{{pieces}}" />
                 <label class="availablePieces">Available pieces:</label>
             </div>
 
