Comment statick div tag templates

--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -14,7 +14,7 @@
     <div class="houses">
         {{#each offers}}
             {{> homePageOffer}}
-            <div class="card-home">
+            {{!-- <div class="card-home">
                 <h2>Real House Luxury Villa</h2>
                 <div class="cta-container"><a href="#" class="details-link">Details</a></div>
                 <div class="card_image"><img src="/static/images/5.jpg"></div>
@@ -33,7 +33,7 @@
                 <div class="cta-container"><a href="#" class="details-link">Details</a></div>
                 <div class="card_image"><img src="/static/images/apartments.jpg"></div>
 
-            </div>
+            </div> --}}
         {{else}}
             <!-- If there are still no offers for housing in the database display: -->
             <div class="no-data-container">
