--- a/src/views/offers/housing.hbs
+++ b/src/views/offers/housing.hbs
@@ -3,7 +3,7 @@
     <!-- If there are offers for housing in the database display each of them -->
     {{#each offers}}
         {{> housingOffer}}
-        <div class="card">
+        {{!-- <div class="card">
             <h3>Real House Luxury Villa</h3>
             <p>Spacious and grand villa, 3 bedroom, 2 bath.</p>
             <div class="cta-container"><a href="#" class="det-link">Details</a></div>
@@ -24,7 +24,7 @@
             <div class="cta-container"><a href="#" class="det-link">Details</a></div>
             <div class="card_circle"><img src="./static/images/apartments.jpg"></div>
 
-        </div>
+        </div> --}}
     {{else}}
     <!-- If there are still no offers for housing in the database display: -->
         <div class="no-data-listing">
