--- a/src/views/partials/homePageOffer.hbs
+++ b/src/views/partials/homePageOffer.hbs
@@ -1,5 +1,5 @@
 <div class="card-home">
     <h2>{{name}}</h2>
-    <div class="cta-container"><a href="/offers/{{_id}}/details" class="details-link">Details</a></div>
+    <div class="cta-container"><a href="/housing/{{_id}}/details" class="details-link">Details</a></div>
     <div class="card_image"><img src="{{image}}"></div>
 </div>
