Update search view

--- a/src/views/offers/search.hbs
+++ b/src/views/offers/search.hbs
@@ -13,7 +13,7 @@
             <div class="card_circle"><img src="./static/images/house2.jpg"></div>
 
         </div> --}}
-    {{else}}
+    {{else if notFound}}
         <!-- If there are no search matches, show: -->
         <div class="no-data-listing">
             <p class="no-offer">No match was found for the submitted type...</p>
