--- a/src/views/offers/search.hbs
+++ b/src/views/offers/search.hbs
@@ -1,4 +1,4 @@
-<form class="search" action="" method="">
+<form class="search" method="POST">
     <input type="search" name="" placeholder="Search here...">
     <button type="submit">Search</button>
 </form>
@@ -6,10 +6,12 @@
     {{#each offers}}
         <!-- If there are any matching matches from the search, show each of them -->
         {{> housingOffer}}
-    {{else if notFound}}
+    {{/each}}
+
+    {{#if notMatches}}
         <!-- If there are no search matches, show: -->
         <div class="no-data-listing">
             <p class="no-offer">No match was found for the submitted type...</p>
         </div>
-    {{/each}}
+    {{/if}}
 </section>
