--- a/src/views/offers/search.hbs
+++ b/src/views/offers/search.hbs
@@ -1,5 +1,5 @@
 <form class="search" method="POST">
-    <input type="search" name="" placeholder="Search here...">
+    <input type="search" name="text" placeholder="Search here...">
     <button type="submit">Search</button>
 </form>
 <section id="find-section">
@@ -8,7 +8,7 @@
         {{> housingOffer}}
     {{/each}}
 
-    {{#if notMatches}}
+    {{#if noMatches}}
         <!-- If there are no search matches, show: -->
         <div class="no-data-listing">
             <p class="no-offer">No match was found for the submitted type...</p>
